--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <ul class="navbar-nav">
       <li class="logo">
         <a href="#" class="nav-link">
-          <span class="link-text logo-text">Fireship</span>
+          <span class="link-text logo-text">INTERIOR DESIGN</span>
           <svg
             aria-hidden="true"
             focusable="false"
